hphp/hack/test/typecheck/reified_generics/deep_soft_reification.php.exp
File "deep_soft_reification.php", line 12, characters 14-24:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "deep_soft_reification.php", line 5, characters 7-17:
Definition is here
File "deep_soft_reification.php", line 15, characters 14-20:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "deep_soft_reification.php", line 6, characters 7-13:
Definition is here
File "deep_soft_reification.php", line 28, characters 26-31:
Invalid reified hint (Typing[4305])
File "deep_soft_reification.php", line 28, characters 26-31:
This is not reified, it cannot be used as a reified type argument
File "deep_soft_reification.php", line 5, characters 36-36:
T is reified
File "deep_soft_reification.php", line 29, characters 26-30:
Invalid reified hint (Typing[4305])
File "deep_soft_reification.php", line 29, characters 26-30:
This is soft reified, it cannot be used as a reified type argument
File "deep_soft_reification.php", line 5, characters 36-36:
T is reified
File "deep_soft_reification.php", line 32, characters 22-27:
Invalid reified hint (Typing[4305])
File "deep_soft_reification.php", line 32, characters 22-27:
This is not reified, it cannot be used as a reified type argument
File "deep_soft_reification.php", line 6, characters 21-21:
T is reified
File "deep_soft_reification.php", line 33, characters 22-26:
Invalid reified hint (Typing[4305])
File "deep_soft_reification.php", line 33, characters 22-26:
This is soft reified, it cannot be used as a reified type argument
File "deep_soft_reification.php", line 6, characters 21-21:
T is reified
